--- a/index.ipynb
+++ b/index.ipynb
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -306,16 +306,17 @@
        " 'Canada',\n",
        " 'South Korea',\n",
        " 'Malta',\n",
+       " 'Thailand',\n",
        " 'Thailand']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "countries.append('Thailand') # add code here\n",
+    "countries.append(\"Thailand\") # add code here\n",
     "countries"
    ]
   },
