--- a/index.ipynb
+++ b/index.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -265,10 +265,13 @@
        " 'Italy',\n",
        " 'Canada',\n",
        " 'South Korea',\n",
+       " 'Malta',\n",
+       " 'Thailand',\n",
+       " 'Thailand',\n",
        " 'Malta']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
