--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -310,10 +310,12 @@
        " 'South Korea',\n",
        " 'Malta',\n",
        " 'Thailand',\n",
+       " 'Thailand',\n",
+       " 'Malta',\n",
        " 'Thailand']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
