--- a/index.ipynb
+++ b/index.ipynb
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -353,10 +353,13 @@
        " 'Canada',\n",
        " 'South Korea',\n",
        " 'Malta',\n",
+       " 'Thailand',\n",
+       " 'Thailand',\n",
+       " 'Malta',\n",
        " 'Thailand']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
